# lunar_lander

./: Cargo.toml  README.md
build_scripts/: build.ps1
media/3d_models/cone/: green_cone.mtl
media/3d_models/lunar_lander/: lunar_lander.mtl
media/3d_models/sphere/: red_sphere.mtl
notes/directx/: resources.md
notes/math/: matrix_multiplication.md  quaternions.md
notes/nvim/: vimrc.txt
shaders/: compiled-pixel-shader.shader  compiled-vertex-shader.shader  pixel.hlsl  vertex_perspective.hlsl
src/: main.rs
src/beagle_math/: mod.rs
src/obj_loader/: mod.rs
